Fix cursor visibility at beginning of line

--- a/css/tinymcebackport-content.css
+++ b/css/tinymcebackport-content.css
@@ -3,6 +3,13 @@
  * Very basic stylesheet.
  */
 /**
+ * Cursor visibility at beginning of line with focus halo.
+ */
+.mce-content-body {
+  padding-left: 5px !important;
+  padding-right: 5px !important;
+}
+/**
  * Image alignment by class.
  */
 img {
